--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.0",
+    "@clerk/themes": "^1.7.9",
     "@uploadthing/react": "^5.7.0",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
