--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@clerk/nextjs": "^4.27.0",
     "@clerk/themes": "^1.7.9",
     "@uploadthing/react": "^5.7.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.293.0",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.13.0",
+    "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.4"
   },
