--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@svgr/webpack": "^8.1.0",
     "@uploadthing/react": "^5.7.0",
     "class-variance-authority": "^0.7.0",
