--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.293.0",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
+    "nextjs-toploader": "^1.6.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
